@@ -339,4 +339,72 @@ class AsyncHttpClientTest extends FunSuite with ShouldMatchers with StubServerFi
             Await.result(response, 1 seconds).getStatusCode should be (200)
         }
     }
+
+    test("[DELETE] request") {
+        val route = DELETE (
+            path = "/test",
+            params = Map("test" -> "value"),
+            response = StaticServerResponse(Text_Plain, "", 200)
+        )
+
+        withStubServerFixture(8080, route) { server =>
+            val response: Future[Response] = new AsyncHttpClient().delete(s"http://localhost:${server.portInUse}/test", Map("test" -> "value"))
+            Await.result(response, 200 milliseconds).getStatusCode should be (200)
+        }
+    }
+
+    test("[DELETE] request using 'Request instance' should return response") {
+        val route = DELETE (
+            path = "/test",
+            params = Map("test" -> "value"),
+            response = StaticServerResponse(Text_Plain, "", 200)
+        )
+
+        withStubServerFixture(8080, route) { server =>
+            val request = Request("http://localhost", server.portInUse, "/test", Map("test" -> "value"))
+            val response = new AsyncHttpClient().delete(request)
+            Await.result(response, 200 milliseconds).getStatusCode should be (200)
+        }
+    }
+
+    test("[DELETE] request with header should return response") {
+        val dynamicResponse = { request: ServerRequest =>
+            println(request.getHeader)
+            if(request.getValue("toto") == "titi"  && request.getValue("key") == "value") StaticServerResponse(Text_Plain, "OK dynamic", 200)
+            else StaticServerResponse(Text_Plain, "KO", 404)
+        }
+
+        val route = DELETE (
+            path = "*",
+            response = DynamicServerResponse(dynamicResponse)
+        )
+
+        withStubServerFixture(8080, route) { server =>
+            val request = Request("http://localhost", server.portInUse, "/", headers = Seq(Header("toto", "titi"), Header("key", "value")))
+            val response = new AsyncHttpClient().delete(request)
+            Await.result(response, 300 milliseconds).getStatusCode should be (200)
+        }
+    }
+
+    test("[DELETE] request with cookie should return response") {
+        val dynamicResponse = { request: ServerRequest =>
+            val cookie = request.getCookie("name")
+            if(cookie != null && cookie.getValue == "value" && cookie.getName == "name" &&
+                cookie.getDomain == "domain" && cookie.getPath == "path")
+                StaticServerResponse(Text_Plain, "OK dynamic", 200)
+            else StaticServerResponse(Text_Plain, "OK dynamic", 404)
+        }
+
+        val route = DELETE (
+            path = "*",
+            response = DynamicServerResponse(dynamicResponse)
+        )
+
+        withStubServerFixture(8080, route) { server =>
+            val cookie: Cookie = Cookie("domain", "name", "value", "path")
+            val request: Request = Request("http://localhost", server.portInUse, "/", Map("toto" -> "titi"), Seq(cookie))
+            val response: Future[Response] = new AsyncHttpClient().delete(request)
+            Await.result(response, 1 seconds).getStatusCode should be (200)
+        }
+    }
 }
